--- a/src/aspect-ratio/index.less
+++ b/src/aspect-ratio/index.less
@@ -7,4 +7,12 @@
   position: absolute;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: stretch;
+
+  >* {
+    flex-grow: 1;
+  }
 }
